# picture_box

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  uno.config.ts  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.tsx  root.tsx
frontend/src/api/: api.ts  basic.ts  mocks.ts  models.ts
frontend/src/components/: Button.tsx  Card.tsx  Header.tsx  Input.tsx  Loading.tsx  Pagination.tsx  PictureCard.tsx  Placeholder.tsx
frontend/src/routes/: index.tsx
frontend/src/routes/partitions/: [partition].tsx
frontend/src/utils/: useAuthorization.ts
frontend/src/view/: Login.tsx  Main.tsx  Partitions.tsx
resources/: config.json
src/: lib.rs  main.rs  models.rs  services.rs  storage.rs  utils.rs
src/tests/: mod.rs  storage_tests.rs
src/tests/common/: mod.rs
