[package]
name = "picture_box"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
imageinfo = "0.7.5"
webp = "0.2.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
md5 = "0.7.0"
glob = "0.3.1"
actix-web = "4"
actix-multipart = "0.5.0"
bytes = "1.3.0"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
rust-embed = "6.4"
actix-embed = "0.1.0"