[package]
name = "picture_box"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0"
imageinfo = "0"
webp = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0"
glob = "0"
actix-web = { version = "4", features = ["openssl"] }
openssl = "0.10"
actix-multipart = "0"
bytes = "1"
log = "0"
env_logger = "0"
futures-util = "0"
rust-embed = "6"
actix-embed = "0"
actix-cors = "0"
